refactor: 이벤트 기반 리스너 아키텍처 개선
- Chat 리스너 분리 및 개선
  - AiResponseEventListener 삭제 (단일 책임 원칙 위반)
  - ChatNotificationListener 추가
    * AI 메시지 생성 완료 이벤트 수신
    * WebSocket으로 채팅 메시지 전송 전담
    * 에러 처리 및 클라이언트 알림
  - AiChatRequestListener 업데이트
    * AiChatRequestedEvent 수신으로 변경
    * ChatAgent 호출

- Trip 리스너 분리 및 개선
  - TripPlanStreamListener 삭제 (혼재된 책임)
  - TripPlanProgressListener → TripPlanNotificationListener 이름 변경
    * WebSocket 알림 전송 전담
    * 4가지 이벤트 처리 (Saved, Completed, Error, Cancelled)
  - TripPlanPersistenceListener 추가
    * DailyPlanGeneratedEvent 수신
    * DB 저장 책임 (구현 대기)
  - TripPlanGenerationListener 업데이트
    * TripPlanGenerationRequestedEvent 수신
    * TripAgent 호출

- 컨트롤러 패키지 구조 개선
  - chat/presentation/message → chat/presentation/web
    * AiMessageController 이동
    * WebSocketExceptionHandler 이동

- 리스너 책임 분리 원칙 적용
  ✅ AI 처리: AiChatRequestListener, TripPlanGenerationListener
  ✅ DB 저장: TripPlanPersistenceListener
  ✅ WebSocket 알림: ChatNotificationListener, TripPlanNotificationListener

- 테스트 코드 업데이트
  - 리스너 변경에 따른 테스트 수정
  - 사용되지 않는 테스트 파일 삭제

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>